--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -66,7 +66,7 @@
       "metadata": {
         "tags": [],
         "id": "0d7a1e02-6aef-48e6-b084-7fd8ce6e7491",
-        "outputId": "f4ce4a84-3259-4e8f-ab47-5a3abcb650f6"
+        "outputId": "5169d67b-7e65-48c6-b18e-bb5cae8d9470"
       },
       "outputs": [
         {
@@ -118,7 +118,7 @@
       "metadata": {
         "tags": [],
         "id": "4364cd76-91e1-42cc-9279-e3143d5caeaf",
-        "outputId": "50cf3791-4f13-40fd-c99e-a0007b7b6b3d"
+        "outputId": "92a1c1d3-9132-41af-ebf5-44e53bd79158"
       },
       "outputs": [
         {
@@ -155,7 +155,7 @@
       "metadata": {
         "tags": [],
         "id": "d6073169-e88c-472d-94da-063fcc9bb680",
-        "outputId": "6e930a8d-0275-4c3a-8269-1c692595cef2"
+        "outputId": "5eeb3c46-bee6-4977-d4ea-7eb658ef2d3d"
       },
       "outputs": [
         {
@@ -195,7 +195,7 @@
       "metadata": {
         "tags": [],
         "id": "19928872-9709-4262-b83f-2f3ad243ae25",
-        "outputId": "83c65726-1a4d-4ca6-92ed-71b9011b0be7"
+        "outputId": "3bd324ac-d883-48f7-b122-8fdadb396d31"
       },
       "outputs": [
         {
@@ -220,7 +220,7 @@
       "metadata": {
         "tags": [],
         "id": "e6ce68b2-5776-44fb-a10c-6edf4bb3b688",
-        "outputId": "dcbcb631-a6b0-4104-a84c-9c7264a8e9df"
+        "outputId": "7f59c52f-3ecf-477b-d346-4f7a9a8877e8"
       },
       "outputs": [
         {
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "2186f4ac-94e1-4c37-a03d-a5021c75d1f3",
       "metadata": {
         "tags": [],
@@ -289,7 +289,7 @@
       "metadata": {
         "tags": [],
         "id": "b426965a-f6bd-475c-9fbd-402fb1b84a02",
-        "outputId": "5825fcd5-8818-4b7b-c3f7-41d836152fa7"
+        "outputId": "2cbb05e0-01a1-4532-a888-2c80398924ac"
       },
       "outputs": [
         {
@@ -319,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "8f0d3c0c-2b98-4909-b2d2-40624eb0260f",
       "metadata": {
         "tags": [],
@@ -337,7 +337,7 @@
       "metadata": {
         "tags": [],
         "id": "174ac4e8-e18b-4265-a859-42eeefd0029e",
-        "outputId": "1aabf2ca-1142-4c2a-f0cc-f6984a323bdc"
+        "outputId": "424d2fd2-3c61-4b4a-def7-41acaa2b645f"
       },
       "outputs": [
         {
@@ -372,7 +372,7 @@
       "metadata": {
         "tags": [],
         "id": "5ae4566f-a6df-43c6-9105-72cdd10b4a10",
-        "outputId": "8f36c493-3f7c-4b20-8a60-c9ed0b88570c"
+        "outputId": "0b0cc222-3761-44c1-cccd-6d6ee9577208"
       },
       "outputs": [
         {
@@ -397,7 +397,7 @@
       "metadata": {
         "tags": [],
         "id": "0e0da044-8b8b-4f86-a98e-2b74e0f41645",
-        "outputId": "932eec3d-82f4-48c6-87a2-07ef1a1d6f48"
+        "outputId": "30d9087a-0fbe-44f7-fa57-769258e930c3"
       },
       "outputs": [
         {
@@ -422,7 +422,7 @@
       "metadata": {
         "tags": [],
         "id": "419476d3-a1a4-4b80-9106-1de0b46e2bdf",
-        "outputId": "5324f97d-0953-46fe-d50c-f8156f648668"
+        "outputId": "17128d5f-3b9f-4011-faf3-fbce83a6c8d1"
       },
       "outputs": [
         {
@@ -447,7 +447,7 @@
       "metadata": {
         "tags": [],
         "id": "26953f44-eaff-4c27-94cd-8fe62b15f39d",
-        "outputId": "cd6e42cd-445b-43cf-de54-2008126a816d"
+        "outputId": "f86de489-e0f2-4f47-ab05-67559e250799"
       },
       "outputs": [
         {
@@ -472,7 +472,7 @@
       "metadata": {
         "tags": [],
         "id": "d613d40b-455a-4e5c-9341-ef59d62860ea",
-        "outputId": "3cfb8fe0-cf51-4517-9627-145dd2637805"
+        "outputId": "f28e1ace-200b-4ed8-99c8-46e8664129f8"
       },
       "outputs": [
         {
@@ -491,14 +491,156 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### bool (布林變數)"
+      ],
+      "metadata": {
+        "id": "z9PPwahDGtw5"
+      },
+      "id": "z9PPwahDGtw5"
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "a754b794-806e-4505-a212-bf5751a249f5",
       "metadata": {
-        "id": "a754b794-806e-4505-a212-bf5751a249f5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a754b794-806e-4505-a212-bf5751a249f5",
+        "outputId": "c7eb7ca5-ee68-4f9e-f239-80ce22a3d4dc"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
+      "source": [
+        "3 > 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = 3 > 2"
+      ],
+      "metadata": {
+        "id": "ZEjhScbpHA2X"
+      },
+      "id": "ZEjhScbpHA2X",
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HVmhtQieHMbp",
+        "outputId": "9518370b-6c82-4516-f06e-8f96903c229b"
+      },
+      "id": "HVmhtQieHMbp",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x == y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "glBi1rzFHN2A",
+        "outputId": "538c8c98-ac4c-44c7-eb91-c0d22e8d7aad"
+      },
+      "id": "glBi1rzFHN2A",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = x == y"
+      ],
+      "metadata": {
+        "id": "SRCnZcKmHdd5"
+      },
+      "id": "SRCnZcKmHdd5",
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a4cXuesUHo4j",
+        "outputId": "8e992b44-6245-4b6b-dcb8-6cf32c977242"
+      },
+      "id": "a4cXuesUHo4j",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dzACugqpHrDH"
+      },
+      "id": "dzACugqpHrDH",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
