--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "464fa38e-5a3b-48b0-8438-89ad1ea53c84",
       "metadata": {
         "tags": [],
@@ -61,23 +61,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "0d7a1e02-6aef-48e6-b084-7fd8ce6e7491",
       "metadata": {
         "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "0d7a1e02-6aef-48e6-b084-7fd8ce6e7491",
-        "outputId": "5169d67b-7e65-48c6-b18e-bb5cae8d9470"
+        "outputId": "3bbd26f4-9a5c-4cda-8213-a81a5b2edd97"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "int"
             ]
           },
-          "execution_count": 2,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 14
         }
       ],
       "source": [
@@ -86,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "e3c4ec66-2b63-45e3-a935-1855f4b44226",
       "metadata": {
         "tags": [],
@@ -100,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "1766ca2a-e3a1-47b6-9454-cb646f6f81a7",
       "metadata": {
         "tags": [],
@@ -633,12 +636,90 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### str (字串) => 文字訊息"
+      ],
+      "metadata": {
+        "id": "LtzU53MpIPcI"
+      },
+      "id": "LtzU53MpIPcI"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m = dog"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "id": "dzACugqpHrDH",
+        "outputId": "6a4917f0-31a0-4b30-e97a-1d01856f3087"
+      },
+      "id": "dzACugqpHrDH",
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'dog' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-0f7e55f5d78a>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdog\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'dog' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m = \"dog\""
+      ],
+      "metadata": {
+        "id": "P3WQYyxQIXka"
+      },
+      "id": "P3WQYyxQIXka",
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(m)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wZt5BRCTIlc7",
+        "outputId": "b2875bd6-be65-4b8a-bc78-f207a011c982"
+      },
+      "id": "wZt5BRCTIlc7",
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "dzACugqpHrDH"
+        "id": "Cb-M8p4TImhz"
       },
-      "id": "dzACugqpHrDH",
+      "id": "Cb-M8p4TImhz",
       "execution_count": null,
       "outputs": []
     }
@@ -663,6 +744,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
