--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -715,11 +715,134 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(type(m))"
+      ],
       "metadata": {
-        "id": "Cb-M8p4TImhz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cb-M8p4TImhz",
+        "outputId": "6d03f691-6eba-43c0-a34b-1f161e32e519"
       },
       "id": "Cb-M8p4TImhz",
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 基本容器型別"
+      ],
+      "metadata": {
+        "id": "puoo0bt3SVLj"
+      },
+      "id": "puoo0bt3SVLj"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* list\n",
+        "* tuple\n",
+        "* dict\n",
+        "* set"
+      ],
+      "metadata": {
+        "id": "zpjFQzSGSXmP"
+      },
+      "id": "zpjFQzSGSXmP"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### list"
+      ],
+      "metadata": {
+        "id": "0N543T5USbii"
+      },
+      "id": "0N543T5USbii"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = ['a', 'b', 'c', 'd', 'e']"
+      ],
+      "metadata": {
+        "id": "8jLqqSTrMy1N"
+      },
+      "id": "8jLqqSTrMy1N",
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QoqLL4vbShf1",
+        "outputId": "31127aa1-c19c-4c42-cbaf-5c5dfec4f9c5"
+      },
+      "id": "QoqLL4vbShf1",
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c', 'd', 'e']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rxXnmdmISiFi",
+        "outputId": "c204fc5a-1d9f-42b0-9fca-8a5a0e7e870a"
+      },
+      "id": "rxXnmdmISiFi",
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PVTpj31RSjwU"
+      },
+      "id": "PVTpj31RSjwU",
       "execution_count": null,
       "outputs": []
     }
@@ -744,7 +867,6 @@
     },
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
