--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -838,11 +838,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "y = list('abcde')"
+      ],
       "metadata": {
         "id": "PVTpj31RSjwU"
       },
       "id": "PVTpj31RSjwU",
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-7PDE6rUS-vi",
+        "outputId": "928066ac-1857-42f2-e1eb-861aee796fcd"
+      },
+      "id": "-7PDE6rUS-vi",
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c', 'd', 'e']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PZlr26UgS_NB"
+      },
+      "id": "PZlr26UgS_NB",
       "execution_count": null,
       "outputs": []
     }
