--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/vcdemy/20240227/blob/main/20240227%E7%AD%86%E8%A8%98.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "dd76e46d-ea11-4aac-afed-42c894383dfe",
       "metadata": {
         "id": "dd76e46d-ea11-4aac-afed-42c894383dfe"
@@ -877,11 +867,464 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x[0]"
+      ],
       "metadata": {
-        "id": "PZlr26UgS_NB"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "PZlr26UgS_NB",
+        "outputId": "f6976008-4351-4930-b827-973e6f2d0c79"
       },
       "id": "PZlr26UgS_NB",
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6m_BUe6fTSqB",
+        "outputId": "73ac4a6e-9071-4970-8eda-7eefecb60f20"
+      },
+      "id": "6m_BUe6fTSqB",
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "PjoZlksBTcVm",
+        "outputId": "330f7fb6-8877-4822-eca5-d32639d1a935"
+      },
+      "id": "PjoZlksBTcVm",
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'e'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[1:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1f4WqhBfThRC",
+        "outputId": "c72f2659-efb9-49cc-9d8e-a116987b5650"
+      },
+      "id": "1f4WqhBfThRC",
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['b', 'c']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M-_avhPNTi6B",
+        "outputId": "053c4233-1680-4d28-b51d-92e37dfd49df"
+      },
+      "id": "M-_avhPNTi6B",
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[-3:]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "av12bMTwTzfh",
+        "outputId": "8fc23813-0c59-4876-9ad5-30ebabcdb8b8"
+      },
+      "id": "av12bMTwTzfh",
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['c', 'd', 'e']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = [1, 2]\n",
+        "y = [3, 4]"
+      ],
+      "metadata": {
+        "id": "k4e9n3wvT0fH"
+      },
+      "id": "k4e9n3wvT0fH",
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x + y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JuZXHfiiUIp-",
+        "outputId": "67378bed-8f89-479e-94b5-b41ad216783b"
+      },
+      "id": "JuZXHfiiUIp-",
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x * 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g-W5BAmgURyn",
+        "outputId": "e95af0cb-a26e-4ff0-b64b-72b6fef9d3eb"
+      },
+      "id": "g-W5BAmgURyn",
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 1, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### tuple"
+      ],
+      "metadata": {
+        "id": "24Fsah1tUsLQ"
+      },
+      "id": "24Fsah1tUsLQ"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx = tuple('abcde')"
+      ],
+      "metadata": {
+        "id": "ee5XEN0pUgIF"
+      },
+      "id": "ee5XEN0pUgIF",
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9pJ3XpEFUwa6",
+        "outputId": "a2bd2f55-3b44-4425-aacd-7db32a48960e"
+      },
+      "id": "9pJ3XpEFUwa6",
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('a', 'b', 'c', 'd', 'e')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(tx)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mMSe4hRhUxUW",
+        "outputId": "76df95a5-43d8-4eb6-c738-a1c27e0fb922"
+      },
+      "id": "mMSe4hRhUxUW",
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tuple"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "WO1yHaZGU2XM",
+        "outputId": "60b2923d-f8bd-48ee-d95d-beefdda485e5"
+      },
+      "id": "WO1yHaZGU2XM",
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx[-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "IXNM-mBAU90O",
+        "outputId": "0859433a-f7b3-4f2e-8530-28f2c9fbe129"
+      },
+      "id": "IXNM-mBAU90O",
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'e'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx[1:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GX9fyJRcU-2x",
+        "outputId": "89f9e59f-6cae-4c49-b8d5-8932d6e81ea8"
+      },
+      "id": "GX9fyJRcU-2x",
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('b', 'c')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx[:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WE6hdz8fVBEH",
+        "outputId": "2e578305-7238-42db-9e70-de97e94d1bbf"
+      },
+      "id": "WE6hdz8fVBEH",
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('a', 'b', 'c')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx[-3:]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QQD-iruzVCxq",
+        "outputId": "c9d5ad14-e54a-4f25-ebb9-37ca5cc9e065"
+      },
+      "id": "QQD-iruzVCxq",
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('c', 'd', 'e')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DktNPVV_VDtj"
+      },
+      "id": "DktNPVV_VDtj",
       "execution_count": null,
       "outputs": []
     }
@@ -905,8 +1348,7 @@
       "version": "3.11.5"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
