--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vcdemy/20240227/blob/main/20240227%E7%AD%86%E8%A8%98.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "dd76e46d-ea11-4aac-afed-42c894383dfe",
       "metadata": {
         "id": "dd76e46d-ea11-4aac-afed-42c894383dfe"
@@ -1319,12 +1329,143 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### dict"
+      ],
+      "metadata": {
+        "id": "Ll0SvHXvVdYV"
+      },
+      "id": "Ll0SvHXvVdYV"
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "d = {}"
+      ],
       "metadata": {
         "id": "DktNPVV_VDtj"
       },
       "id": "DktNPVV_VDtj",
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Up-U2XAgVnO9",
+        "outputId": "e1e20223-3ddc-4e5b-d707-9143e9674efc"
+      },
+      "id": "Up-U2XAgVnO9",
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d['cat'] = '貓咪'"
+      ],
+      "metadata": {
+        "id": "4FJamXHcVtMp"
+      },
+      "id": "4FJamXHcVtMp",
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d['dog'] = '狗狗'"
+      ],
+      "metadata": {
+        "id": "5hwpgnmJV6Dn"
+      },
+      "id": "5hwpgnmJV6Dn",
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0bcgjXVXV8NP",
+        "outputId": "d3ea1336-5c8e-481c-c035-2db2d865e36d"
+      },
+      "id": "0bcgjXVXV8NP",
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'cat': '貓咪', 'dog': '狗狗'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d['cat']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "GpKikHC0V8tR",
+        "outputId": "4f999f96-d1a2-4ee5-d718-647da4a155c8"
+      },
+      "id": "GpKikHC0V8tR",
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'貓咪'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UsGlKzpCWWI7"
+      },
+      "id": "UsGlKzpCWWI7",
       "execution_count": null,
       "outputs": []
     }
@@ -1348,7 +1489,8 @@
       "version": "3.11.5"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
