--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -1460,12 +1460,154 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### set"
+      ],
+      "metadata": {
+        "id": "BRyIbsGyWs4A"
+      },
+      "id": "BRyIbsGyWs4A"
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "s1 = set('abcde')"
+      ],
       "metadata": {
         "id": "UsGlKzpCWWI7"
       },
       "id": "UsGlKzpCWWI7",
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s2 = set('cdefg')"
+      ],
+      "metadata": {
+        "id": "OYHhgNU_WweT"
+      },
+      "id": "OYHhgNU_WweT",
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2IAV8VOTWyUn",
+        "outputId": "c92d0022-98f9-4fee-ec52-fb22fcc2d808"
+      },
+      "id": "2IAV8VOTWyUn",
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a', 'b', 'c', 'd', 'e'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jCQKIUUtWy20",
+        "outputId": "23794008-d492-4eef-fc0e-80bd9cfaae43"
+      },
+      "id": "jCQKIUUtWy20",
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'c', 'd', 'e', 'f', 'g'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1 & s2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fyrycMeoWzru",
+        "outputId": "ad9339eb-40d2-44d0-9543-6fef48412e02"
+      },
+      "id": "fyrycMeoWzru",
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'c', 'd', 'e'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1 | s2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DS7HgKuIW4_W",
+        "outputId": "7d4b4011-522b-456e-baea-eb41da34c2d1"
+      },
+      "id": "DS7HgKuIW4_W",
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a', 'b', 'c', 'd', 'e', 'f', 'g'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "177TClWBW6VU"
+      },
+      "id": "177TClWBW6VU",
       "execution_count": null,
       "outputs": []
     }
